# HW5

./: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  Weapon.cpp  Weapon.h  editor.xml  github_settings.xml  list.h  main.c  main.cpp  map.c  map.h  map_mtm.c  map_mtm.h  mtm_array.h  mtm_ex3.h  mtmflix.c  mtmflix.h  node.c  node.h  other.xml  project.default.xml  series.c  series.h  set.h  test_utilities.h  ui.lnf.xml  user.c  user.h  vcs.xml
codestyles/: Default.xml
